refractored the hero section to allow for easy media query

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Travel-Landing-Page</title>
   </head>
   <body>
-    <main>
-      <section class="hero" id="hero">
+    <section class="hero" id="hero">
+      <div class="hero-content-wrapper">
         <nav>
           <div class="odigo-logo">
             <svg
@@ -53,87 +53,91 @@
           Being gorgeous with belly side up i could pee on this if i had the energy but under the
           bed, for attack the child, open the door,
         </p>
-        <div class="search" id="search-1">
-          <span class="oval"></span>
-          <input placeholder="What would you like to do?" />
+        <div class="search-wrapper">
+          <div class="search" id="search-1">
+            <span class="oval"></span>
+            <span class="placeholder">What do you want to do?</span>
+          </div>
+          <div class="search" id="search-1">
+            <span class="oval"></span>
+            <span class="placeholder">Where would you like to go?</span>
+          </div>
+          <button id="search_btn">SEARCH</button>
         </div>
-        <div class="search" id="search-2">
-          <span class="oval"></span>
-          <input placeholder="Where would you like to go?" />
-        </div>
-        <button id="search_btn">SEARCH</button>
-      </section>
+      </div>
+    </section>
 
-      <section class="benefit-and-get-inspired">
-        <div class="card">
-          <h2>Benefits of Odigo</h2>
-          <div class="benefit-card-wrapper">
-            <div class="benefit-card">
-              <img src="./assets/Icon.png" />
-              <h4>Welcome to Odigo</h4>
-              <p>
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come
-                over.
-              </p>
-              <div class="learn-more">
-                <span>LEARN MORE</span>
-                <img src="./assets/Shape.png" />
-              </div>
+    <section class="benefit">
+      <div class="card">
+        <h2>Benefits of Odigo</h2>
+        <div class="benefit-card-wrapper">
+          <div class="benefit-card">
+            <img src="./assets/Icon.png" />
+            <h4>Welcome to Odigo</h4>
+            <p>
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come
+              over.
+            </p>
+            <div class="learn-more">
+              <span>LEARN MORE</span>
+              <img src="./assets/Shape.png" />
             </div>
-            <div class="benefit-card">
-              <img src="./assets/Icon (1).png" />
-              <h4>Your Personal Japan Guide</h4>
-              <p>
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come
-                over.
-              </p>
-              <div class="learn-more">
-                <span>LEARN MORE</span>
-                <img src="./assets/Shape.png" />
-              </div>
+          </div>
+          <div class="benefit-card">
+            <img src="./assets/Icon (1).png" />
+            <h4>Your Personal Japan Guide</h4>
+            <p>
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come
+              over.
+            </p>
+            <div class="learn-more">
+              <span>LEARN MORE</span>
+              <img src="./assets/Shape.png" />
             </div>
-            <div class="benefit-card">
-              <img src="./assets/Icon (2).png" />
-              <h4>Promoting Local Businesses</h4>
-              <p>
-                Jump off balcony, onto stranger's head. Chase ball of string hide when guests come
-                over.
-              </p>
-              <div class="learn-more">
-                <span>LEARN MORE</span>
-                <img src="./assets/Shape.png" />
-              </div>
+          </div>
+          <div class="benefit-card">
+            <img src="./assets/Icon (2).png" />
+            <h4>Promoting Local Businesses</h4>
+            <p>
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come
+              over.
+            </p>
+            <div class="learn-more">
+              <span>LEARN MORE</span>
+              <img src="./assets/Shape.png" />
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="get-inspired">
-          <div class="wrapper">
-            <div class="top-wrapper">
-              <h2>Get inspired for your next trip</h2>
-              <div class="view-all">
-                <span>VIEW ALL</span>
-                <img src="./assets/Shape.png" />
-              </div>
-            </div>
-            <div class="image-wrapper">
-              <div class="pictures"></div>
-              <div class="pictures"></div>
-              <div class="pictures"></div>
-              <div class="pictures"></div>
-              <div class="pictures"></div>
+      <div class="get-inspired">
+        <div class="wrapper">
+          <div class="top-wrapper">
+            <h2>Get inspired for your next trip</h2>
+            <div class="view-all">
+              <span>VIEW ALL</span>
+              <img src="./assets/Shape.png" />
             </div>
           </div>
+          <div class="image-wrapper">
+            <div class="pictures">Mount Fuji</div>
+            <div class="pictures">Kyoto</div>
+            <div class="pictures">Tokyo</div>
+            <div class="pictures">Niigata</div>
+            <div class="pictures">Sapporo</div>
+          </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section id="hero"></section>
+    <section id="get-inspired"></section>
 
-      <section id="hero"></section>
+    <section id="prefecture-and-neighborhood"></section>
 
-      <section id="video"></section>
+    <section id="today-top-places"></section>
 
-      <section id="footer"></section>
-    </main>
+    <section id="video"></section>
+
+    <section id="footer"></section>
   </body>
 </html>
