coded the get-inspired and prefecture sections

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css-files/hero.css" rel="stylesheet" />
     <link href="css-files/benefit.css" rel="stylesheet" />
+    <link href="css-files/get-inspired.css" rel="stylesheet" />
+    <link href="css-files/prefecture-and-neighborhood.css" rel="stylesheet" />
     <title>Travel-Landing-Page</title>
   </head>
   <body>
@@ -109,35 +111,87 @@
           </div>
         </div>
       </div>
+    </section>
 
-      <div class="get-inspired">
-        <div class="wrapper">
-          <div class="top-wrapper">
-            <h2>Get inspired for your next trip</h2>
-            <div class="view-all">
-              <span>VIEW ALL</span>
-              <img src="./assets/Shape.png" />
-            </div>
+    <section class="get-inspired" id="get-inspired">
+      <div class="top-wrapper">
+        <h2>Get inspired for your next trip</h2>
+        <div class="view-all">
+          <span>VIEW ALL</span>
+          <img src="./assets/Shape.png" alt="shape" />
+        </div>
+      </div>
+      <div class="image-wrapper">
+        <div class="first">
+          <div class="mount-fuji">
+            <img src="./assets/mount-fuji.jpg" alt="Mount Fuji" />
+            <div class="fuji-text">Mount Fuji</div>
           </div>
-          <div class="image-wrapper">
-            <div class="pictures">Mount Fuji</div>
-            <div class="pictures">Kyoto</div>
-            <div class="pictures">Tokyo</div>
-            <div class="pictures">Niigata</div>
-            <div class="pictures">Sapporo</div>
+
+          <div class="kyoto">
+            <img src="./assets/kyoto.jpg" alt="Kyoto" />
+            <div class="kyoto-text">Kyoto</div>
+          </div>
+        </div>
+        <div class="second">
+          <div class="tokyo">
+            <img src="./assets/tokyo.jpg" alt="Tokyo" />
+            <div class="tokyo-text">Tokyo</div>
+          </div>
+          <div class="niigata">
+            <img src="./assets/Niigata.jpg" alt="Niigata" />
+            <div class="niigata-text">Niigata</div>
+          </div>
+
+          <div class="sapporo">
+            <img src="./assets/sapporo.jpg" alt="Sapporo" />
+            <div class="sapporo-text">Sapporo</div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="get-inspired"></section>
+    <section class="prefecture-and-neighborhood" id="prefecture-and-neighborhood">
+      <div class="row1">
+        <img src="./assets/preImage1.png" alt="" />
+        <div class="support1">
+          <h3>Prefecture in Focus: Tottori</h3>
+          <p>
+            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+            Being gorgeous with belly side up i could pee on this if i had the energy but under the
+            bed, for attack the child, open the door,
+          </p>
+          <div>
+            <span>VIEW PREFECTURE</span>
+            <img src="./assets/Shape.png" />
+          </div>
+        </div>
+      </div>
+      <div class="row2">
+        <div class="support2">
+          <h3>Featured Neighborhood: Kyoto’s Arashiyama</h3>
+          <p>
+            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+            Being gorgeous with belly side up i could pee on this if i had the energy but under the
+            bed, for attack the child, open the door,
+          </p>
+          <div>
+            <span>VIEW PREFECTURE</span>
+            <img src="./assets/Shape.png" />
+          </div>
+        </div>
+        <img src="./assets//preImage2.png" alt="" />
+      </div>
+    </section>
 
-    <section id="prefecture-and-neighborhood"></section>
+    <section class="today-top-places" id="today-top-places">
+      
+    </section>
 
-    <section id="today-top-places"></section>
+    <section class="video" id="video">
 
-    <section id="video"></section>
+      <sfooter class="footer" id="footer"></footer>
+    </section>
 
-    <section id="footer"></section>
   </body>
 </html>
