worked on the top-place-to visit section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="../../softwares/fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet" />
     <link href="css-files/hero.css" rel="stylesheet" />
     <link href="css-files/benefit.css" rel="stylesheet" />
     <link href="css-files/get-inspired.css" rel="stylesheet" />
     <link href="css-files/prefecture-and-neighborhood.css" rel="stylesheet" />
+    <link href="css-files/today-top-places.css" rel="stylesheet" />
     <title>Travel-Landing-Page</title>
   </head>
   <body>
@@ -185,13 +187,156 @@
     </section>
 
     <section class="today-top-places" id="today-top-places">
-      
+      <h2>Today top places to visit</h2>
+      <div class="gd">
+        <div class="top-place-card">
+          <div class="img-wrapper">
+            <img src="./assets/place1.png" alt="" />
+            <div class="description">
+              <div class="place-name">NAGOYA</div>
+              <div class="reaction">
+                <div>
+                  <span>221</span>
+                  <i class="far fa-heart"></i>
+                </div>
+                <div>
+                  <span>50</span>
+                  <i class="far fa-comment-dots"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>
+            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+            Being gorgeous with belly side up i could pee on this.
+          </p>
+          <button>SEE MORE</button>
+        </div>
+
+        <div class="top-place-card">
+          <div class="img-wrapper">
+            <img src="./assets/place2.png" alt="" />
+            <div class="description">
+              <div class="place-name">NIIGATA</div>
+              <div class="reaction">
+                <div>
+                  <span>221</span>
+                  <i class="far fa-heart"></i>
+                </div>
+                <div>
+                  <span>50</span>
+                  <i class="far fa-comment-dots"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>
+            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+            Being gorgeous with belly side up i could pee on this.
+          </p>
+          <button>SEE MORE</button>
+        </div>
+
+        <div class="top-place-card">
+          <div class="img-wrapper">
+            <img src="./assets/place3.png" alt="" />
+            <div class="description">
+              <div class="place-name">OSAKA</div>
+              <div class="reaction">
+                <div>
+                  <span>221</span>
+                  <i class="far fa-heart"></i>
+                </div>
+                <div>
+                  <span>50</span>
+                  <i class="far fa-comment-dots"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>
+            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+            Being gorgeous with belly side up i could pee on this.
+          </p>
+          <button>SEE MORE</button>
+        </div>
+
+        <div class="top-place-card">
+          <div class="img-wrapper">
+            <img src="./assets/place4.png" alt="" />
+            <div class="description">
+              <div class="place-name">SAITAMA</div>
+              <div class="reaction">
+                <div>
+                  <span>221</span>
+                  <i class="far fa-heart"></i>
+                </div>
+                <div>
+                  <span>50</span>
+                  <i class="far fa-comment-dots"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>
+            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+            Being gorgeous with belly side up i could pee on this.
+          </p>
+          <button>SEE MORE</button>
+        </div>
+
+        <div class="top-place-card">
+          <div class="img-wrapper">
+            <img src="./assets/place5.png" alt="" />
+            <div class="description">
+              <div class="place-name">UENO</div>
+              <div class="reaction">
+                <div>
+                  <span>221</span>
+                  <i class="far fa-heart"></i>
+                </div>
+                <div>
+                  <span>50</span>
+                  <i class="far fa-comment-dots"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>
+            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+            Being gorgeous with belly side up i could pee on this.
+          </p>
+          <button>SEE MORE</button>
+        </div>
+
+        <div class="top-place-card">
+          <div class="img-wrapper">
+            <img src="./assets/place1.png" alt="6" />
+            <div class="description">
+              <div class="place-name">SHIBUYA</div>
+              <div class="reaction">
+                <div>
+                  <span>221</span>
+                  <i class="far fa-heart"></i>
+                </div>
+                <div>
+                  <span>50</span>
+                  <i class="far fa-comment-dots"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>
+            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+            Being gorgeous with belly side up i could pee on this.
+          </p>
+          <button>SEE MORE</button>
+        </div>
+      </div>
     </section>
 
     <section class="video" id="video">
-
-      <sfooter class="footer" id="footer"></footer>
+      <footer class="footer" id="footer"></footer>
     </section>
-
   </body>
 </html>
